# fire

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html
doc/: aliases.js  search-index.js  source-files.js
doc/fire/: CachedProblem.t.html  GradientBasedMinimizer.t.html  GradientBasedMinimizing.t.html  TerminationCriteria.t.html  all.html  fire.v.html  fn.fire.html  fn.monitor.html  fn.test.html  index.html  sidebar-items.js  struct.CachedProblem.html  struct.FIRE.html  struct.FunctionData.html  struct.Progress.html  struct.Termination.html  struct.UserTermination.html  trait.GradientBasedMinimizer.html  trait.GradientBasedMinimizing.html  trait.Problem.html  trait.TerminationCriteria.html
doc/fire/common/: Verbosity.t.html  enum.LogLevel.html  fn.create_dir.html  fn.err_msg.html  fn.glob.html  fn.read_file.html  fn.remove_dir_all.html  fn.write_to_file.html  index.html  macro.bail.html  macro.ensure.html  macro.error.html  macro.format_err.html  macro.info.html  macro.log_enabled.html  macro.trace.html  macro.warn.html  sidebar-items.js  struct.Error.html  struct.Verbosity.html  trait.FromParallelIterator.html  trait.IndexedParallelIterator.html  trait.IntoParallelIterator.html  trait.IntoParallelRefIterator.html  trait.IntoParallelRefMutIterator.html  trait.ParallelBridge.html  trait.ParallelExtend.html  trait.ParallelSlice.html  trait.ParallelSliceMut.html  trait.ParallelString.html  trait.ResultExt.html  type.CliResult.html  (+2 more)
docs/: linesearch.odt  linesearch.org
src/: fire.rs  lib.rs  line.rs  lj.rs  math.rs
tests/: lj.rs  rosenbrock.rs
(+103 files in other folders)
